Auswertung PDF Teil 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-
-auswertungtex.toc
-auswertungtex.log
-auswertungtex.aux
-auswertungtex.synctex.gz
+Auswertung.toc
+Auswertung.aux
+Auswertung.log
+Auswertung.synctex.gz
 interesse_info_barplot.png
 interesse_mathe_barplot.png
 mathelk_barplot.png
 studienfach_barplot.png
-auswertungtex.tex
+interesse_mathe_info_mosaikplot.png
+mathelk_interesse_info_mosaikplot.png
+mathelk_interesse_mathe_mosaikplot.png
+studienfach_interesse_info_mosaikplot.png
+studienfach_interesse_mathe_mosaikplot.png
