--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ mathelk_interesse_info_mosaikplot.png
 mathelk_interesse_mathe_mosaikplot.png
 studienfach_interesse_info_mosaikplot.png
 studienfach_interesse_mathe_mosaikplot.png
+interesse_mathe0_info0_mosaikplot.png
+mathelk_interesse_info0_mosaikplot.png
+mathelk_interesse_mathe0_mosaikplot.png
+studienfach_interesse_info0_mosaikplot.png
+studienfach_interesse_mathe0_mosaikplot.png
