--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ mathelk_interesse_info0_mosaikplot.png
 mathelk_interesse_mathe0_mosaikplot.png
 studienfach_interesse_info0_mosaikplot.png
 studienfach_interesse_mathe0_mosaikplot.png
+AuswertungNachtrag.aux
+AuswertungNachtrag.log
+AuswertungNachtrag.synctex.gz
+interesse_info0_barplot.png
+interesse_mathe0_barplot.png
